crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__propagate__alias_capture_function.snap
---
source: crates/nash-codegen/src/optimizer_tests/propagate.rs
assertion_line: 43
expression: "format!(\"--- core before\\n{}\\n--- core after\\n{}\\n--- baseline\\n{}\\n--- candidate\\n{}\",\npretty(before), pretty(after), output(&baseline), output(&candidate))"
---
--- core before
let x#1 : int = trace "outer" in 42 in
let alias#2 : int = x#1 in
let anf#4 : int = trace "argument" in 0 in
(\x#3 : int -> alias#2) anf#4
--- core after
let x#1 : int = trace "outer" in 42 in
let anf#4 : int = trace "argument" in 0 in
(\x#3 : int -> x#1) anf#4
--- baseline
--- uplc
(program 1.1.0
  [(lam x_1
    [(lam alias_2
      [(lam anf_4 [(lam x_3 alias_2) anf_4])
        (force
          [[(force (builtin trace)) (con string "argument")] (delay (con integer 0))])])
      x_1])
    (force
      [[(force (builtin trace)) (con string "outer")] (delay (con integer 42))])])
--- result
(con integer 42)
--- logs
["outer", "argument"]
--- candidate
--- uplc
(program 1.1.0
  [(lam x_1
    [(lam anf_4 [(lam x_3 x_1) anf_4])
      (force
        [[(force (builtin trace)) (con string "argument")] (delay (con integer 0))])])
    (force
      [[(force (builtin trace)) (con string "outer")] (delay (con integer 42))])])
--- result
(con integer 42)
--- logs
["outer", "argument"]
