crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__propagate__shared_string_alias.snap
---
source: crates/nash-codegen/src/optimizer_tests/propagate.rs
assertion_line: 40
expression: "crate::harness::pass_snapshot(b.arena, core,\nformat!(\"--- core before\\n{}\\n--- baseline\\n{}\\n--- core after\\n{}\\n--- candidate\\n{}\",\npretty(before), output(&baseline), pretty(after), output(&candidate)))"
---
--- unoptimized Core
let text#1 : string = "shared payload" in
let alias#2 : string = text#1 in
appendString alias#2 alias#2
--- unoptimized UPLC
(program 1.1.0
  [(lam text_1 [(lam alias_2 [[(builtin appendString) alias_2] alias_2]) text_1])
    (con string "shared payload")])
--- optimized Core
let text#3 : string = "shared payload" in
appendString text#3 text#3
--- optimized UPLC
(program 1.1.0
  [(lam text_1 [[(builtin appendString) text_1] text_1])
    (con string "shared payload")])
--- isolated pass
--- core before
let text#1 : string = "shared payload" in
let alias#2 : string = text#1 in
appendString alias#2 alias#2
--- baseline
--- uplc
(program 1.1.0
  [(lam text_1 [(lam alias_2 [[(builtin appendString) alias_2] alias_2]) text_1])
    (con string "shared payload")])
--- result
(con string "shared payloadshared payload")
--- logs
[]
--- core after
let text#1 : string = "shared payload" in
appendString text#1 text#1
--- candidate
--- uplc
(program 1.1.0
  [(lam text_1 [[(builtin appendString) text_1] text_1])
    (con string "shared payload")])
--- result
(con string "shared payloadshared payload")
--- logs
[]
